--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .h-wrapper {
   display: flex;
+  width: 100%;
+  position: sticky;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
@@ -10,12 +12,14 @@
 .h-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .h-menu {
   display: flex;
   align-items: center;
   gap: 20px; 
+  transition: right 0.3s ease-in-out;
 }
 
 .h-menu a {
@@ -31,6 +35,11 @@
   background-color: #e7f1ff;
 }
 
+.h-menu a.active {
+  background-color: #007bff;
+  color: white;
+}
+
 .btn-outline-primary {
   border: 1px solid #007bff;
   color: #007bff;
@@ -44,4 +53,12 @@
 .btn-outline-primary:hover {
   background-color: #007bff;
   color: white;
+}
+
+.logo {
+  transition: transform 0.3s ease;
+}
+
+.logo:hover{
+  transform: scale(1.1);
 }
