styles the piechart

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -31,3 +31,8 @@ html,body, #root{
   width: 100%;
   border-collapse: collapse;
 }
+
+.pie-chart-container {
+  max-width: 420px;
+  margin: auto;
+}
